<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:id="@+id/menu_explore"
        android:title="@string/explore"
        android:icon="@drawable/baseline_explore_24"/>

    <item
        android:id="@+id/menu_subscription"
        android:title="@string/subscription"
        android:icon="@drawable/baseline_subscriptions_24"/>

    <item
        android:id="@+id/menu_library"
        android:title="@string/library"
        android:icon="@drawable/baseline_folder_24"/>

    <item
        android:id="@+id/menu_account"
        android:title="@string/account"
        android:icon="@drawable/baseline_account_circle_24"/>

</menu>